```mermaid
classDiagram

%% =======================
%% CAPA DE PRESENTACIÓN
%% =======================

class AuthController {
+login(dto: AuthRequestDTO): ResponseEntity
+registrar(dto: AuthRequestDTO): ResponseEntity
}

class ExamenController {
+crearExamen(dto: ExamenRequestDTO, token: String): ResponseEntity
+eliminarExamen(examenId: int, token: String): ResponseEntity
+obtenerExamen(categoriaSlug: String, examenSlug: String): ResponseEntity
}

class CategoriaController {
+crearCategoria(dto: CategoriaRequestDTO, token: String): ResponseEntity
+eliminarCategoria(categoriaId: int, token: String): ResponseEntity
+listarCategorias(): ResponseEntity
+obtenerExamenesPorCategoria(categoriaSlug: String): ResponseEntity
}

class PreguntaController {
+crearPregunta(dto: PreguntaCreateDTO, token: String): ResponseEntity
+crearPreguntasEnMasa(dtos: List~PreguntaCreateDTO~, token: String): ResponseEntity
+eliminarPregunta(preguntaId: int, token: String): ResponseEntity
+listarPreguntasPorExamen(examenId: int): ResponseEntity
}

%% =======================
%% CAPA DE TRANSPORTE (DTOs)
%% =======================

class AuthRequestDTO {
+String email
+String password
}

class AuthResponseDTO {
+String tokenJwt
+String rol
}

class ExamenRequestDTO {
+String titulo
+String descripcion
+int categoriaId
+List~PreguntaDTO~ preguntas
}

class CategoriaRequestDTO {
+String nombre
+String descripcion
+List~String~ apodos
}

class PreguntaDTO {
<<abstract>>
+Integer id
+String tipo
+String texto
}

class PreguntaCreateDTO {
<<abstract>>
+String texto
+Integer examenId
}

class PreguntaMultipleChoiceDTO {
+List~String~ opciones
+String respuestaCorrecta
+Integer examenId
}

class PreguntaVerdaderoFalsoDTO {
+boolean respuestaCorrecta
+Integer examenId
}

class PreguntaDesarrolloDeterministicoDTO {
+String respuestaEsperadaExacta
+Integer examenId
}

class PreguntaDesarrolloNoDeterministicoDTO {
+String rubricaEvaluacion
+Integer examenId
}

%% DTOs DE RESPUESTA

class CategoriaResponseDTO {
+int id
+String nombre
+String descripcion
+String slug
+int creadorId
}

class ExamenResumenDTO {
+int id
+String titulo
+String descripcion
+String slug
+String creadorEmail
+LocalDateTime creadoEn
}

class ExamenResponseDTO {
+int id
+String titulo
+String descripcion
+String slug
+String categoria
+String creadorEmail
+LocalDateTime creadoEn
+List~PreguntaDTO~ preguntas
}

%% =======================
%% CAPA DE NEGOCIO (GESTORES)
%% =======================

class GestorAuth {
+registrarUsuario(dto: AuthRequestDTO): Usuario
+autenticar(dto: AuthRequestDTO): AuthResponseDTO
}

class GestorCategoria {
+crearCategoria(dto: CategoriaRequestDTO, usuarioId: int): CategoriaResponseDTO
+eliminarCategoria(categoriaId: int, usuarioId: int, rol: String): void
+listarCategorias(): List~CategoriaResponseDTO~
+buscarPorApodo(apodo: String): List~CategoriaResponseDTO~
-generarSlug(nombre: String): String
}

class GestorExamen {
+crearExamen(dto: ExamenRequestDTO, usuarioId: int): ExamenResponseDTO
+eliminarExamen(examenId: int, usuarioId: int, rol: String): void
+obtenerPorSlugs(categoriaSlug: String, examenSlug: String): ExamenResponseDTO
}

class GestorPregunta {
+crearPregunta(dto: PreguntaCreateDTO, usuarioId: int, rol: String): PreguntaDTO
+crearPreguntasEnMasa(dtos: List~PreguntaCreateDTO~, usuarioId: int, rol: String): void
+eliminarPregunta(preguntaId: int, usuarioId: int, rol: String): void
+listarPreguntasPorExamen(examenId: int): List~PreguntaDTO~
}

class GestorSeguridad {
+generarToken(usuario: Usuario): String
+extraerUsuarioId(token: String): int
+extraerRol(token: String): String
+esPropietarioOAdmin(usuarioId: int, creadorId: int, rol: String): boolean
}

%% =======================
%% CAPA DE PERSISTENCIA
%% =======================

class UsuarioRepository {
<<interface>>
+findByEmail(email: String): Optional~Usuario~
+save(usuario: Usuario): Usuario
}

class ExamenRepository {
<<interface>>
+findBySlug(slug: String): Optional~Examen~
+findByCategoriaId(categoriaId: int): List~Examen~
+save(examen: Examen): Examen
+deleteById(id: int): void
}

class CategoriaRepository {
<<interface>>
+findBySlug(slug: String): Optional~Categoria~
+findAll(): List~Categoria~
+save(categoria: Categoria): Categoria
+findByApodo(apodo: String): List~Categoria~
+deleteById(id: int): void
}

class PreguntaRepository {
<<interface>>
+findByExamenId(examenId: int): List~Pregunta~
+findByIdAndExamenId(preguntaId: int, examenId: int): Optional~Pregunta~
+save(pregunta: Pregunta): Pregunta
+deleteById(id: int): void
}

%% =======================
%% ENTIDADES DEL DOMINIO
%% =======================

class Usuario {
-int id
-String email
-String passwordHash
-String rol
}

class Categoria {
-int id
-String nombre
-String descripcion
-String slug
-int creadorId
-List~String~ apodos
}

class Examen {
-int id
-String titulo
-String descripcion
-String slug
-int creadorId
-int categoriaId
-LocalDateTime creadoEn
}

class Pregunta {
<<abstract>>
-int id
-int examenId
-String texto
}

class PreguntaMultipleChoice {
-List~String~ opciones
-String respuestaCorrecta
}

class PreguntaVerdaderoFalso {
-boolean respuestaCorrecta
}

class PreguntaDesarrolloDeterministico {
-String respuestaEsperadaExacta
}

class PreguntaDesarrolloNoDeterministico {
-String rubricaEvaluacion
}

%% =======================
%% RELACIONES
%% =======================

%% Flujo de autenticación
AuthController ..> AuthRequestDTO : recibe
AuthController ..> AuthResponseDTO : devuelve
AuthController --> GestorAuth : delega

GestorAuth --> UsuarioRepository : usa
GestorAuth --> GestorSeguridad : solicita token

%% Flujo de categorías
CategoriaController ..> CategoriaRequestDTO : recibe
CategoriaController ..> CategoriaResponseDTO : devuelve
CategoriaController ..> ExamenResumenDTO : devuelve
CategoriaController --> GestorCategoria : delega

GestorCategoria --> GestorSeguridad : valida permisos
GestorCategoria --> CategoriaRepository : usa

%% Flujo de exámenes
ExamenController ..> ExamenRequestDTO : recibe
ExamenController ..> ExamenResponseDTO : devuelve
ExamenController --> GestorExamen : delega

ExamenRequestDTO *-- PreguntaDTO : contiene
ExamenResponseDTO *-- PreguntaDTO : contiene

GestorExamen --> GestorSeguridad : valida permisos
GestorExamen --> ExamenRepository : usa

%% Flujo de preguntas
PreguntaController ..> PreguntaCreateDTO : recibe
PreguntaController ..> PreguntaDTO : devuelve
PreguntaController --> GestorPregunta : delega

GestorPregunta --> GestorSeguridad : valida permisos
GestorPregunta --> PreguntaRepository : usa
GestorPregunta --> ExamenRepository : usa

%% Persistencia
UsuarioRepository ..> Usuario : persiste
ExamenRepository ..> Examen : persiste
CategoriaRepository ..> Categoria : persiste
PreguntaRepository ..> Pregunta : persiste

%% Relaciones de dominio
Usuario "1" o-- "*" Examen : crea
Usuario "1" o-- "*" Categoria : crea
Categoria "1" o-- "*" Examen : contiene
Examen "1" *-- "*" Pregunta : composicion

%% Relaciones de Herencia (Polimorfismo)
PreguntaMultipleChoice --|> Pregunta : hereda
PreguntaVerdaderoFalso --|> Pregunta : hereda
PreguntaDesarrolloDeterministico --|> Pregunta : hereda
PreguntaDesarrolloNoDeterministico --|> Pregunta : hereda

PreguntaMultipleChoiceDTO --|> PreguntaDTO : hereda
PreguntaMultipleChoiceDTO ..|> PreguntaCreateDTO : implementa
PreguntaVerdaderoFalsoDTO --|> PreguntaDTO : hereda
PreguntaVerdaderoFalsoDTO ..|> PreguntaCreateDTO : implementa
PreguntaDesarrolloDeterministicoDTO --|> PreguntaDTO : hereda
PreguntaDesarrolloDeterministicoDTO ..|> PreguntaCreateDTO : implementa
PreguntaDesarrolloNoDeterministicoDTO --|> PreguntaDTO : hereda
PreguntaDesarrolloNoDeterministicoDTO ..|> PreguntaCreateDTO : implementa
```